--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -465,10 +465,10 @@ Try it.
 **Ans-2.3.1.3:**
 
 
-4.  Recreate the R code necessary to generate and save the following graph \@ref(fig:fig-6-plots) \ref{fig:fig-6-plots}, and arrange them in a figure with 2 columns. Note that wherever a categorical variable is used in the plot, it's `drv`. Use the mathematical notation in one, and the function from `patchwork`, `plot_layout` in another for laying out the plot.
+4.  Recreate the R code necessary to generate and save the following graph \@ref(fig:6-plots) and arrange them in a figure with 2 columns. Note that wherever a categorical variable is used in the plot, it's `drv`. Use the mathematical notation in one, and the function from `patchwork`, `plot_layout` in another for laying out the plot.
 
-```{r fig-6-plots}
-#| label:fig-6-plots
+```{r}
+#| label: 6-plots
 #| echo: false
 #| out-width: "100%"
 #| fig-alt: |
