--- a/lessons/01-communication.Rmd
+++ b/lessons/01-communication.Rmd
@@ -303,6 +303,8 @@ The only limit is your imagination (and your patience with positioning annotatio
 2.  Use `annotate()` to add a point geom in the middle of the following plot without having to create a tibble. Customize the shape, size, or color of the point.
 
 ```{r}
+#| fig-show: hide
+
 ggplot(mpg, aes(displ, hwy)) +
   geom_point() 
 ```
@@ -345,7 +347,7 @@ g <- ggplot(mpg, aes(displ, hwy)) + geom_point()
 
 4.  What arguments to `geom_label()` control the appearance of the background box?
 
-**Ans-1.3.1.4:
+**Ans-1.3.1.4:**
 
 5.  What are the four arguments to `arrow()`?
     How do they work?
@@ -374,7 +376,7 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 ggplot2 automatically adds default scales behind the scenes:
 
 ```{r}
-#| fig-show: "hide"
+#| fig-show: hide
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point(aes(color = class)) +
@@ -676,7 +678,6 @@ The designers, Nathaniel Smith and Stéfan van der Walt, carefully tailored cont
 These scales are available as continuous (`c`), discrete (`d`), and binned (`b`) palettes in ggplot2.
 
 ```{r}
-#| fig-show: hold
 #| fig-width: 8
 #| fig-asp: 0.75
 #| fig-alt: |
@@ -693,12 +694,10 @@ df <- tibble(
 ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24) +
   labs(title = "Default, continuous", x = NULL, y = NULL)
   
-ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24)  +
-  scale_fill_viridis_c() +
+ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24)  + scale_fill_viridis_c() +
   labs(title = "Viridis, continuous", x = NULL, y = NULL)
 
-ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24)  +
-  scale_fill_viridis_b() 
+ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24)  + scale_fill_viridis_b() 
   labs(title = "Viridis, binned", x = NULL, y = NULL)
 ```
 
